styles.css
:root{
        --top-bg-colour:#0a9127be;
        --top-a-bg-colour: #bdb64ea8;
        --top-a-colour: #000000;
        --top-a-hover-bg-colour: #e6dc5a;
        --top-a-hover-colour: #000000;
}
html {
        overflow-y: overlay;
        overflow-x: hidden;
        background-color: #000000;
}
.backing{
        z-index: -1;
        position: fixed;
        top: 0;
        right: 0;
        background-image: image-set("assets/images/background.png");
        background-size: 100%;
        width: 100vw;
        height: 100vw;
        aspect-ratio: 23/27;
}
.cover {
        z-index: -1;
        position: fixed;
        top: 0;
        left: 0;
        background-color: rgba(21, 21, 21, 0.6);
        background-size: cover;
        width: 100%;
        height: 100%;
        overflow-x: hidden;
}



.top {
        position:fixed;
        width: 90vw;
        margin-left: 5vw;
        margin-right: 5vw;
        top: 0;
        align-self: center;
        font-weight: 900;
        background-color: var(--top-bg-colour);
        border-bottom-left-radius: 15px;
        border-bottom-right-radius: 15px;
        text-align: center;
        transition-duration: 0.4s;
        z-index: 5;
        height: 115px;
}
.top .links{
        padding-left: 2.5%;
        padding-right: 5%;
        position:fixed;
        display: flex;
        overflow-x: overlay;
        overflow-y: hidden;
        width: 100%;
        flex-wrap: nowrap;
        z-index: 6;
}
.top .links::-webkit-scrollbar-track-piece{
        background: #00000000;
        width: 10vw;
}        /*justify-content: center;*/

::-webkit-scrollbar-thumb{
        width: 1px;
        background: rgba(0, 0, 0, 0.432);
        height: 1px;
        border-radius: 100px;
        -webkit-border-radius: 100px;
        -moz-border-radius: 100px;
        -ms-border-radius: 100px;
        -o-border-radius: 100px;
}
::-webkit-scrollbar{
        width: 5px;
        height: 5px;
}
::-webkit-scrollbar-track-piece{
        background: #00000000;
}
.top a {
        transition-duration: 0.4s;
        font-weight: 900;
        font-size:xxx-large;
        margin: 15px;
        padding: 5px;
        padding-bottom: 18px;
        padding-top: 8px;
        color: var(--top-a-colour);
        background-color: var(--top-a-bg-colour);
        background-size: cover;
        width: 250px;
        height: 45px;
        border-radius: 13px;
        display:inline-block;
        transition-duration: 0.4s;
        text-decoration: none;
        text-shadow: 1px 0 #000;
        z-index: 6;
}
.top:has(a:hover) a:not(a:hover){
        background-color: var(--top-a-bg-colour);
        color: var(--top-a-colour);
}

.top a.active{
        background-color: var(--top-a-hover-bg-colour);
        color: var(--top-a-hover-colour);
}
.top a.active:before{
        background-color: var(--top-a-hover-bg-colour);
        color: var(--top-a-hover-colour);
}
.top a:hover{
        background-color: var(--top-a-hover-bg-colour);
        color: var(--top-a-hover-colour);
}


.top p{
        position: absolute;
        width: 178px;
        top: -3%;
        text-align: center;
        transition-duration: 0.4;
}
.top a:hover p{
        animation: testAnim2 3s infinite;
        -webkit-animation: testAnim2 3s infinite;
}

.shader{
        color:#00000080;
        background-color: #00000054;
        size: inherit;
}

.poster{
        position: absolute;
        display: flex;
        top:-10px;
        left:0px;
        z-index: 8;
        width: calc(100vw + 20px);
        padding-top:20px;
        margin: 0;
        height: 150vh;
        background: linear-gradient(180deg, #000000, #000000, rgba(0, 0, 0, 0.0));
        transition-duration: 3000ms;
        justify-content: center;
}
.poster img{
        display: flex;
        margin-left: auto;
        margin-right: auto;
        top: 0;
        padding-top:0;
        padding-bottom:0;
        height: 100vh;
        justify-self: center;
}
.textColumn table{
        width: auto;
        font-size: larger;

}
.data{
        padding-left: 20px;
        padding-top: 10px;
        width:auto;
        font-weight: 500;
}
.category{
        width:auto;
        vertical-align: text-top;
        padding-top: 10px;
        margin-right: 20px;
        font-weight: 800;
}
.center {
        left:10px;
        margin-top: 300px;
        width: 60%;
        padding:5%;
        font-size: x-large;
        margin-left: auto;
        margin-right: auto;
        background-color: rgba(0, 0, 0, 0.444);
        border-radius: 30px;
        height: 50vh;
        transition-duration: 0.5s;
}


.tooltip {
        position: relative;
        display: inline-block;
      }
      .tooltip .tooltiptext {
        z-index: 10;
        visibility: hidden;
        width: 160px;
        background-color: rgba(0, 0, 0, 0.444);
        text-align: center;
        border-radius: 6px;
        padding: 5px 0;
        position: absolute;
        bottom: 100%;
        left: 150%;
        margin-left: -60px;
      }
      .tooltip:hover .tooltiptext {
        visibility: visible;
      }

.socialsList{
        margin:10%;
        padding: 1px;
        width: 80%;
        margin-top: 200px;
        left:15%;
        color: aliceblue;
        background-color: #00000080;
        border-radius: 20px;
        margin-bottom: 0;
        padding-bottom: 0;
}

.social{
        transition-duration: 1000ms;
        height: 220px;
        width: 80%;
        margin: 10%;
        align-items: center;
        border-radius:20px;
        margin-bottom:0;
        margin-top: 100px;
}
.social .body{
        background-color: #3333336c;
        position:relative;
        height:240px;
        top:0;
        padding-top:40px;
        border-radius: 20px;
}
.social h1{
        height:35px;
        position:relative;
        background-color: #00000057;
        border-top-left-radius: 20px;
        border-top-right-radius: 20px;
        padding:5px;
        padding-left:15px;
        bottom:302px;
}
.social .body .text {
        color: aliceblue;
        font-size: x-large;
        position:relative;
        margin: 10px;
        padding: 10px;
        height: 90%;
        display: inline-block;
        width: 70%;
        text-decoration: none;
}
.social .body .image{
        transition-duration: 3s;
        position:absolute;
        padding:10px;
        height:60%;
        aspect-ratio: 1/1;
        top:60px;
        right:20px;
        display: inline-block;
        background-color: white;
        background-size:contain;
        border-radius: 15px;
}

.top .credits{
        display: none;
        z-index: -99999999;
}
.top .fanart{
        display: none;
        z-index: -99999999;
}

.bottom{
        position: fixed;
        bottom: 10px;
        right: 10px;
        width: 5vw;
        height: 5vh;
        padding: 5vh;
        padding-left: 5vw;
        padding-right: 5vw;
}

.newspaper{
        z-index: 999999;
        right: -98vw;
        bottom: -88vh;
        width: 90vw;
        height: 80vh;
        background-image: image-set("assets/untitled1199.png");
        background-repeat: no-repeat;
        background-size: contain;
        background-position: top;

        transition-duration: 0.5s;
}
.newsbutton{
        background-color: rgba(245, 245, 245, 0.356);
        right: -14vw;
        bottom: -14vh;
}
/*
.social .body .image:hover{
        animation: spin 3s;
        -webkit-animation: spin 3s;
}
*/

@keyframes testAnim1{
        0%  {background-color:rgba(230, 220, 90, 0.87)}
        25% {background-color:rgba(241, 228, 80, 0.87)}
        50% {background-color:rgba(230, 220, 90, 0.87)}
        100%{background-color:rgba(230, 220, 90, 0.87)}

}

@keyframes spin{
        0%{rotate: 0deg;}
        10%{rotate:-15deg}
        80%{rotate: 375deg}
        100%{rotate: 360deg;}
}

.mobile{display:none;}
@media only screen and (max-width: 700px){
        html{background-size: 200%;}
        .backing{
                height: 100vh;
                aspect-ratio: 23/27;
                width: auto;
        }
        .cover{
                background-color: rgba(41, 41, 41, 0.703);
        }
        .top {
                top: 0;
                left: 0;
                width:100%;
                margin:0;
                height: 95px;
        }
        .top .links{
                padding-left: 0%;
                padding-right: 0;
                margin-right: 0;
        }
        .top a{
                font-size: xx-large;
                width: 190px;
                margin: 5px;
                margin-top: 15px;
                margin-bottom: 15px;
                padding-top: 10px;
                padding-bottom: 0px;
        }
        .center{
                margin-top: 200px;
                width: 90%;
                height: calc(-200px + 100vh)
        }
        .poster{
                margin: 0;
                width: calc(100%);
                z-index: 20;
        }
        .poster img{
                margin: 0;
                margin-top: 100px;
                width: calc(100vw);
                height: calc((21/16)*100vw);
        }
        .socialsList{
                margin-left:0;
                width: 100%;
                background-color: #0000002c;
        }
        .social{
                margin:0;
                width:100%;
                height:280px;
                margin-top: 100px;
        }
        .social .body{
                height:280px
        }
        .social h1{
                bottom:341px;
        }
        .social .body .image{
                width: 20%;
                aspect-ratio: 1/1;
                height: auto;
        }
        .social .body .text{
                font-size: medium;
                width: 60%;
        }

        .textColumn table{
                font-size: 20px;
        }
        .data{
                padding-left: 20px;
                font-weight: 500;
        }
        .newsbutton{
                background-color: rgba(245, 245, 245, 0);
                display: none;
        }
        .desktop{display: none;}
        .mobile{display: contents;}
}

